# node_workflow

./: .gitignore  AGENTS.md  README.md  requirements.txt
AttackOfTheNodes/: __init__.py  main.py  pyproject.toml  pytest.ini  run_windows.cmd  test_error_recovery.py  test_v095_nodes.py  test_v09_managers.py
AttackOfTheNodes/backend/: branch_health.py  configuration_manager.py  data_types.py  events.py  file_refs.py  llm_provider.py  master_state.py  memory_bank.py  node_base.py  node_category.py  node_factory.py  node_identity.py  run_session.py  secrets_manager.py  supervisor.py  text_format.py  validator.py  window_manager.py  workflow_map.py
AttackOfTheNodes/docs/: AGENT_HANDOFF.md  AGENT_START_GUIDE.md  ARCHITECTURE.md  BACKEND_FRONTEND_BOUNDARY.md  DOCS_MIGRATION_NOTES.md  FILE_OUTPUT_BUILD_PLAN.md  FILE_TREE.md  FRONTEND_AUDIT_BUILD_PLAN.md  HEADLESS_BUILD_PLAN.md  IO_CONTRACT_UI_DESIGN.md  MASTER_BUILD_PLAN.md  NODE_CATALOG.md  NODE_HELPER.md  NODE_STANDARDIZATION_HANDOFF.md  NODE_STANDARDS.md  PHASE_17_NODE_VISUAL_IDENTITY.md  PROJECT_BACKLOG.md  PROJECT_KNOWLEDGE.md  README.md  SESSION_LOG.md  SIGNAL_FLOW.md  TASK_INDEX.md  TUI_DESIGN.md  UI_QUICK_REFERENCE.md  USER_FRIENDLY_POLISH_BUILD_PLAN.md  V05_BUILD_PLAN.md
AttackOfTheNodes/frontend/: app.py  editor_workflow_adapter.py  file_io.py  io_contract.py  node_io_display.py  node_types.py  notifications.py  styles.tcss  ui_state.py
AttackOfTheNodes/run_errors/: run_0222fd53.json  run_0bbf21f5.json  run_0cffaeea.json  run_1322eff9.json  run_13cd5618.json  run_170baefb.json  run_1d983a84.json  run_23087314.json  run_2abc7ac1.json  run_2e8b745d.json  run_38f21932.json  run_39d1bc69.json  run_406c7675.json  run_415fa5a2.json  (+29 more)
attackofthenodes_v05/: demo_execution.py  main.py  pyproject.toml  test_execution.py
(+1652 files in other folders)
