[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "AttackOfTheNodes"
version = "0.6.0"
requires-python = ">=3.12"
dependencies = [
    "textual>=8.2",
    "textual-dev>=1.8",
]

# Optional Windows window placement/control (FO4, D5 in
# docs/FILE_OUTPUT_BUILD_PLAN.md). Without it files still open; placement
# degrades with a logged warning. Install with: pip install -e ".[windows]"
[project.optional-dependencies]
windows = ['pywin32>=306; platform_system == "Windows"']

[project.scripts]
aotn = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "frontend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
