[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "attackofthenodes"
version = "0.6.0"
requires-python = ">=3.12"
dependencies = [
    "textual>=8.2",
    "textual-dev>=1.8",
]

[project.scripts]
aotn = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "frontend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
